# aech-cli-legal

./: CLI_MANIFEST_SPEC_v4.md  CLI_MANIFEST_SPEC_v5.md  README.md  manifest.json  pyproject.toml
aech_cli_legal/: __init__.py  clauses.py  dataroom.py  documents.py  main.py  manifest.json  research.py  sigpage.py
aech_cli_legal/skills/comment-implementer/: SKILL.md
aech_cli_legal/skills/comment-implementer/scripts/: classify_email.py  conduct_research.py  update_checklist.py
aech_cli_legal/skills/document-assembler/: SKILL.md
aech_cli_legal/skills/document-assembler/scripts/: assemble_document.py  extract_sections.py  list_precedents.py
aech_cli_legal/skills/email-edit-extractor/: SKILL.md
aech_cli_legal/skills/email-edit-extractor/scripts/: apply_edits.py  parse_email_edits.py
aech_cli_legal/skills/precedent-finder/: SKILL.md
aech_cli_legal/skills/precedent-finder/scripts/: search_precedent.py  show_context.py
aech_cli_legal/skills/regulatory-monitor/: SKILL.md
aech_cli_legal/skills/regulatory-monitor/scripts/: analyze_document.py
scripts/: build.sh  update_manifest.py
